image link change

--- a/gh-weblog-2/content/posts/markdown/2014-06-01-01-44-14.md
+++ b/gh-weblog-2/content/posts/markdown/2014-06-01-01-44-14.md
@@ -6,4 +6,4 @@ Well, I'm going to have to suggest 2 new OpenType tables to effect glyph modific
 
 Modifications that would be group-applicable would include any 2D tranformation, point alignment based on other-glyph points and general relative metrics, and supgrouping followed by doing the same thing.  A casual skytrain-ride workout of this would be the following:
 
-<img src="/gh-weblog/images/GMOD.jpg">
+<img src="/gh-weblog-2/images/GMOD.jpg">
