Saving new entry 2015-12-05-17-15-50

--- a/gh-weblog-2/content/posts/markdown/2015-12-05-17-15-50.md
+++ b/gh-weblog-2/content/posts/markdown/2015-12-05-17-15-50.md
@@ -2,7 +2,7 @@ That's not a post title that'll sound very appealing to many people, but it's a 
 
 Invariance is defined as "anything operation you can apply to the control points that define a Bezier curve will be the same as if you broke up the curve as a  sequence of individual points, and applied that operation to each of those, separately".
 
-Bezier curve are invariant under [affine linear transforms](https://en.wikipedia.org/wiki/Affine_transformation), which are those transforms that preserve parallel lines, but not necessarily distance between points or angles between lines. Basic affine linear transforms [are](https://en.wikipedia.org/wiki/Linear_map#Examples_of_linear_transformation_matrices) rotation, reflection, translation, shearing, scaling, and projection.
+Bezier curves are invariant under [affine linear transforms](https://en.wikipedia.org/wiki/Affine_transformation), which are those transforms that preserve parallel lines, but not necessarily distance between points or angles between lines. Basic affine linear transforms [are](https://en.wikipedia.org/wiki/Linear_map#Examples_of_linear_transformation_matrices) rotation, reflection, translation, shearing, scaling, and projection.
 
 However, this is not the only class of transforms (obviously), and another transform that people tend to be interested in are [conformal mappings](https://en.wikipedia.org/wiki/Conformal_map), which preserve the (local) angle between lines, and this is a problem for Bezier curves.
 
