--- a/gh-weblog-2/content/posts/markdown/2015-12-05-17-15-50.md
+++ b/gh-weblog-2/content/posts/markdown/2015-12-05-17-15-50.md
@@ -1,6 +1,6 @@
 That's not a post title that'll sound very appealing to many people, but it's a question without an easy-to-google answer that I get asked more often than makes sense to keep answering on a case by case basis. So let me turn it into a URL on the internet instead.
 
-Invariance is defined as "anything operation you can apply to the control points that define a Bezier curve will be the same as if you broke up the curve as a  sequence of individual points, and applied that operation to each of those, separately".
+Invariance is defined as "any operation you can apply to the control points that define a Bezier curve, and then forming the curve, will yield the same curve as if you broke up the curve as a  sequence of individual points, and applied that operation to each of those, separately".
 
 Bezier curves are invariant under [affine linear transforms](https://en.wikipedia.org/wiki/Affine_transformation), which are those transforms that preserve parallel lines, but not necessarily distance between points or angles between lines. Basic affine linear transforms [are](https://en.wikipedia.org/wiki/Linear_map#Examples_of_linear_transformation_matrices) rotation, reflection, translation, shearing, scaling, and projection.
 
