Saving new entry 2015-12-06-21-41-55

--- a/gh-weblog-2/content/posts/markdown/2015-12-06-21-41-55.md
+++ b/gh-weblog-2/content/posts/markdown/2015-12-06-21-41-55.md
@@ -2,17 +2,19 @@ This is going to be a multiparter, because I've been trying to write this as a s
 
 ## First, it's all OpenType
 
-One thing that most people don't know is that both TTF and OTF font are OpenType fonts. OpenType is a binary format, with an open specification (i.e. it's free to implement codecs for, and you can sign up for the opentype mailing list and influence future verisons), that contains outline data (for drawing letters), tons of metadata used for things ranging from typesetting to hardware memory management, and language-specific typesetting rules like contextual substitutions and positioning. 
+One thing that most people don't know is that both TTF and OTF font are [OpenType fonts](https://www.microsoft.com/typography/otspec/). OpenType is a binary format, with an open specification (i.e. it's free to implement codecs for, and you can sign up for the opentype mailing list and influence future versions), that contains outline data (for drawing letters), tons of metadata used for things ranging from typesetting to hardware memory management, and language-specific typesetting rules like contextual substitutions and positioning. 
 
-When people talk about "TTF" or "OTF" what they really mean is "files that end in `.ttf` and `.otf`", and those are two kinds of OpenType font: fonts ending in `.ttf` are generally OpenType fonts that use the glyf/loca data blocks, with "TrueType" outlines, whereas fonts ending in `.otf` are OpenType fonts that use a CFF data block, with "Type2" outlines. So the difference is in the outline language used.
+When people talk about "TTF" or "OTF" what they really mean is "files that end in `.ttf` and `.otf`", and those are two kinds of OpenType font: fonts ending in `.ttf` are generally OpenType fonts that use the glyf/loca data blocks, with ["TrueType"](https://www.microsoft.com/en-us/Typography/SpecificationsOverview.aspx) outlines, whereas fonts ending in `.otf` are OpenType fonts that use a [CFF data block](https://partners.adobe.com/public/developer/en/font/5176.CFF.pdf), with ["Type2"](https://partners.adobe.com/public/developer/en/font/5177.Type2.pdf) outlines. So the difference is in the outline language used.
 
 We're not going to look at all the fine differences between the two in this post, but let's look at the ones that is easy to talk about and already make a big difference:
 
 ### TrueType - tiny, simple, and hardcoded hinting
 
-TrueType outlines are incredibly straight forward: you get lines and quadratic curves, and that's pretty much it. It's really easy to define shapes in, but the curves are "too" simple so you need quite a few of them. If you have decent design tool, that's mostly irrelevant, and the only thing you'll notice is that an OpenType font that uses TrueType outlines tends to be bigger than an OpenType font with Type2 outlines for the same shapes.
+TrueType outlines are incredibly straight forward: you get lines and [quadratic curves](http://pomax.github.io/bezierinfo/#introduction), and that's pretty much it. It's really easy to define shapes in, but the curves are "too" simple so you need quite a few of them. If you have decent design tool, that's mostly irrelevant, and the only thing you'll notice is that an OpenType font that uses TrueType outlines tends to be bigger than an OpenType font with Type2 outlines for the same shapes.
 
-The other way in which TrueType differs is in how "hinting" works. Hinting is a mechanism to tell font engines "if you need to scale this outline down to fit in the font size we need, and that leads to weird sub pixel positioning, here's how you should resolve that:..." When using TrueType, the hinting is explicit: all the information is stored in the TrueType data, so a font engine can be "dumb" about hinting and simply do what the font tells it to. That makes TrueType, again, a little bigger compared to Type2, but taken together with the simplicity of the language means it's really easy for people to write parsers that do the right thing. Not a lot of instructions, and the hinting is in-font.
+The other way in which TrueType differs is in how ["hinting"](https://www.typotheque.com/articles/hinting) works. Hinting is a mechanism to tell font engines "if you need to scale this outline down to fit in the font size we need, and that leads to weird sub pixel positioning, here's how you should resolve that:..." When using TrueType, the hinting is explicit: all the information is stored in the TrueType data, so a font engine can be "dumb" about hinting and simply do what the font tells it to. That makes TrueType, again, a little bigger compared to Type2, but taken together with the simplicity of the language means it's really easy for people to write parsers that do the right thing. Not a lot of instructions, and the hinting is in-font.
+
+(Although even then, hinting can go [terribly wrong](http://www.rastertragedy.com/), because it's an incredibly hard subject)
 
 ### Type2 - rich, complicated, and "only" hinted.
 
