--- a/gh-weblog-2/content/posts/markdown/2015-12-06-21-41-55.md
+++ b/gh-weblog-2/content/posts/markdown/2015-12-06-21-41-55.md
@@ -4,7 +4,7 @@ This is going to be a multiparter, because I've been trying to write this as a s
 
 One thing that most people don't know is that both TTF and OTF font are [OpenType fonts](https://www.microsoft.com/typography/otspec/). OpenType is a binary format, with an open specification (i.e. it's free to implement codecs for, and you can sign up for the opentype mailing list and influence future versions), that contains outline data (for drawing letters), tons of metadata used for things ranging from typesetting to hardware memory management, and language-specific typesetting rules like contextual substitutions and positioning. 
 
-When people talk about "TTF" or "OTF" what they really mean is "files that end in `.ttf` and `.otf`", and those are two kinds of OpenType font: fonts ending in `.ttf` are generally OpenType fonts that use the glyf/loca data blocks, with ["TrueType"](https://www.microsoft.com/en-us/Typography/SpecificationsOverview.aspx) outlines, whereas fonts ending in `.otf` are OpenType fonts that use a [CFF data block](https://partners.adobe.com/public/developer/en/font/5176.CFF.pdf), with ["Type2"](https://partners.adobe.com/public/developer/en/font/5177.Type2.pdf) outlines. So the difference is in the outline language used.
+When people talk about "TTF" or "OTF" what they really mean is "files that end in `.ttf` and `.otf`", and those are two kinds of OpenType font: fonts ending in `.ttf` are generally OpenType fonts that use the glyf/loca data blocks, with ["TrueType"](https://www.microsoft.com/en-us/Typography/SpecificationsOverview.aspx) outlines, whereas fonts ending in `.otf` are OpenType fonts that use a [CFF data block](https://partners.adobe.com/public/developer/en/font/5176.CFF.pdf), with ["Type2"](https://partners.adobe.com/public/developer/en/font/5177.Type2.pdf) outlines. So the difference is in the outline language used. Everything else is the same, and there's a *lot* of "everything else" in an OpenType font.
 
 We're not going to look at all the fine differences between the two in this post, but let's look at the ones that is easy to talk about and already make a big difference:
 
