Saving new entry 2015-12-06-21-41-55

--- a/gh-weblog-2/content/posts/markdown/2015-12-06-21-41-55.md
+++ b/gh-weblog-2/content/posts/markdown/2015-12-06-21-41-55.md
@@ -6,7 +6,7 @@ One thing that most people don't know is that both TTF and OTF font are [OpenTyp
 
 When people talk about "TTF" or "OTF" what they really mean is "files that end in `.ttf` and `.otf`", and those are two kinds of OpenType font: fonts ending in `.ttf` are generally OpenType fonts that use the glyf/loca data blocks, with ["TrueType"](https://www.microsoft.com/en-us/Typography/SpecificationsOverview.aspx) outlines, whereas fonts ending in `.otf` are OpenType fonts that use a [CFF data block](https://partners.adobe.com/public/developer/en/font/5176.CFF.pdf), with ["Type2"](https://partners.adobe.com/public/developer/en/font/5177.Type2.pdf) outlines. So the difference is in the outline language used. Everything else is the same, and there's a *lot* of "everything else" in an OpenType font.
 
-We're not going to look at all the fine differences between the two in this post, but let's look at the ones that is easy to talk about and already make a big difference:
+We're not going to look at all the fine differences between the two in this post, but let's look at the ones that are easy to talk about and already make a big difference:
 
 ### TrueType - tiny, simple, and hardcoded hinting
 
