Saving new entry 2015-12-10-19-52-55

--- a/gh-weblog-2/content/posts/markdown/2015-12-10-19-52-55.md
+++ b/gh-weblog-2/content/posts/markdown/2015-12-10-19-52-55.md
@@ -1,4 +1,4 @@
-In a previous post I talked about the distinction between "TTF" and "OTF" fonts, and the fact that they're actually both just OpenType fonts. I explained how the difference between TTF and OTF is only which outline language is used, with everything else being the same between the two types of Opentype font, so in this post I'd like to talk about some of the bits that all OpenType fonts have. There are actually quite a lot of things, so this will not be the last post on the subject, but let's just cover as much as we can and see what that leaves.
+In a previous post [I talked about the distinction between "TTF" and "OTF" fonts](/1449438115186), and the fact that they're actually both just OpenType fonts. I explained how the difference between TTF and OTF is only which outline language is used, with everything else being the same between the two types of Opentype font, so in this post I'd like to talk about some of the bits that all OpenType fonts have. There are actually quite a lot of things, so this will not be the last post on the subject, but let's just cover as much as we can and see what that leaves.
 
 Let's start with something that might sound like it can't possibly be true:
 
