Saving new entry 2015-12-15-19-18-49

--- a/gh-weblog-2/content/posts/markdown/2015-12-15-19-18-49.md
+++ b/gh-weblog-2/content/posts/markdown/2015-12-15-19-18-49.md
@@ -1,4 +1,4 @@
-I want to take a little bit of time to explain how I work on Open Source, not because it's wildly different from how everyone else does it, but because it's probably the same as how the vast majority works on Open Source, which means very few people bother to explain the processes involved.
+I want to take a little bit of time to explain how I work on Open Source, both privately and as part of my job as a Software Engineer at the Mozilla Foundation. Not because it's wildly different from how everyone else does it, but because it's probably the same as how the vast majority works on Open Source, which means very few people bother to explain the processes involved.
 
 There are two different kinds of "working on open source", depending on whether the code is a collaboration or just a simple one-man (or woman) project, so let's look at both.
 
