Saving new entry 2016-01-01-03-05-30

--- a/gh-weblog-2/content/posts/markdown/2016-01-01-03-05-30.md
+++ b/gh-weblog-2/content/posts/markdown/2016-01-01-03-05-30.md
@@ -185,7 +185,7 @@ If only there was a way that we could turn the asynchronouse conversion process 
 
 ## execSync'ing our way to success
 
-And in that wish we find the answer: make the conversion a CLI tool, and then `exec` that tool synchronously, using [Node.js](https://nodejs.org)'s built in [execSync](https://nodejs.org/api/child_process.html#child_process_child_process_execsync_command_options), because the following will work brilliantly:
+And in that wish we find the answer: make the conversion a command line utility, and then `exec` that utility synchronously, using [Node.js](https://nodejs.org)'s built in [execSync](https://nodejs.org/api/child_process.html#child_process_child_process_execsync_command_options), because the following will work brilliantly:
 
 ```
 var execSync = require("child_process").execSync;
@@ -206,7 +206,9 @@ function escapeBlockLaTeX(source) {
 }
 ```
 
-But here's where things get tricky. Writing a [CLI](https://en.wikipedia.org/wiki/Command-line_interface) tool that does the MathJax conversion needs a little work, because the command line is tricky, and LaTeX contains all kinds of characters that can do things in shell land. Slashes and ampersands abound, and those are kind of active symbols, so we need to be a little smarter:
+We write a simple `tex2svg.js` file that requires `mathjax-node`, passes it the config options for conversion to SVG, read in the LaTeX as command line argument, and then spits out the conversion result on [standard out](https://en.wikipedia.org/wiki/Standard_streams), so that `execSync` treats it as its function return value.
+
+But here's where things get tricky. Writing a command line utility that does the MathJax conversion requires a little work, because the command line is tricky, and LaTeX contains all kinds of characters that can do things in shell land. Slashes and ampersands abound, and those are kind of active symbols,  so we need to be a little smarter:
 
 ```
 // convert all this... smarter!
