Saving new entry 2016-01-01-03-05-30

--- a/gh-weblog-2/content/posts/markdown/2016-01-01-03-05-30.md
+++ b/gh-weblog-2/content/posts/markdown/2016-01-01-03-05-30.md
@@ -213,11 +213,10 @@ But here's where things get tricky. Writing a command line utility that does the
 ```
 // convert all this... smarter!
 var base64 = new Buffer(latex).toString("base64");
-var mathjaxed = execSync("node tex2svg.js --base54 " + base64);
-
+var mathjaxed = execSync("node tex2svg.js --base64 " + base64);
 ```
 
-And then we just need to make sure that the mathjax script unpacks the passed data from [base 64 format](https://en.wikipedia.org/wiki/Base64) to plain string format before converting, and we're good!
+And then we just need to make sure that the MathJax script unpacks the passed data from [base 64 format](https://en.wikipedia.org/wiki/Base64) to plain string format before converting, and we're good!
 
 But not quite: this is not exactly a cheap thing to do. Firing up an instance of node and loading `mathjax-node` takes time. Not enough to notice if you only do it once, but if you need to run this lots of times, a second each time adds up to having to wait minutes for this building to happen. Every time you want to run the dev server.
 
