--- a/gh-weblog-2/content/posts/markdown/2016-01-01-03-05-30.md
+++ b/gh-weblog-2/content/posts/markdown/2016-01-01-03-05-30.md
@@ -218,7 +218,7 @@ var mathjaxed = execSync("node tex2svg.js --base64 " + base64);
 
 And then we just need to make sure that the MathJax script unpacks the passed data from [base 64 format](https://en.wikipedia.org/wiki/Base64) to plain string format before converting, and we're good!
 
-But not quite: this is not exactly a cheap thing to do. Firing up an instance of node and loading `mathjax-node` takes time. Not enough to notice if you only do it once, but if you need to run this lots of times, a second each time adds up to having to wait minutes for this building to happen. Every time you want to run the dev server.
+But not quite: executing an external process is not exactly a cheap thing to do, and firing up an instance of Node and loading `mathjax-node` both take time. Not so much that you'd normally notice, but if you need to run this lots of times, one second each time you call `exec` adds up to having to literally wait minutes for your build to finish. Every time you want to run the dev server.
 
 *That is unacceptable.*
 
