Saving new entry 2016-01-01-03-05-30

--- a/gh-weblog-2/content/posts/markdown/2016-01-01-03-05-30.md
+++ b/gh-weblog-2/content/posts/markdown/2016-01-01-03-05-30.md
@@ -108,9 +108,7 @@ function hasLaTeX(input) {
 }
 
 /**
- * We look for MathJax/KaTeX style data, and make sure
- * it is escaped properly so that JSX conversion will
- * still work.
+ * We look for MathJax/KaTeX style data, and convert it to something JSX-safe 
  */
 function escapeBlockLaTeX(source) {
   // MAGIC HAPPENS HERE!
