Saving new entry 2016-01-01-03-05-30

--- a/gh-weblog-2/content/posts/markdown/2016-01-01-03-05-30.md
+++ b/gh-weblog-2/content/posts/markdown/2016-01-01-03-05-30.md
@@ -263,6 +263,6 @@ Responsiveness increase: x1 million. Goal reached.
 
 Instead of every individual user needing to wait for MathJax to do typesetting, the only person waiting for MathJax now is me, and only for "new" LaTeX blocks during the build step. *As it should be*.
 
-I can add sections one at a time, and every time I run the build step, only genuinely new LaTeX will need to get converted. LaTeX that got processed during a previous run already wrote files to disk, so the latex-loader just bypasses the conversion process entirely in for those LaTeX blocks, and so the build really only does exactly as much work as it needs to do to get the data transformed.
+I can add sections one at a time, and every time I run the build step, only genuinely new LaTeX will need to get converted. LaTeX that got processed during a previous run already wrote files to disk, so the latex-loader just bypasses the conversion process entirely for those LaTeX blocks, and so the build really only does exactly as much work as it needs to do to get the data transformed.
 
 Needless to say, I am chuffed to bits about this, and if you have any questions about the process, feel free to reach out to me [on twitter](https://twitter.com/TheRealPomax) or [on github](https://github.com/Pomax/BezierInfo-2/issues), and I'll be happy to talk about it more.
