Saving new entry 2016-01-19-19-27-59

--- a/gh-weblog-2/content/posts/markdown/2016-01-19-19-27-59.md
+++ b/gh-weblog-2/content/posts/markdown/2016-01-19-19-27-59.md
@@ -2,7 +2,7 @@ This is going to be a short post, but it's one that can make the difference betw
 
 ## What do I need version control for, I don't program
 
-Who cares about programming? Do you write text on your computer? Maybe Word docs? A personal web page? Blog entries as .txt files you'll copy-paste into wordpress later? It really doesn't care, the real question is "do you have folders/directories with data in them that you change every now and then, and that you might mess up because you can accidentally hit save and overwrite them, or accidentally hit delete and lose them forever?".
+Who cares about programming? Do you write text on your computer? Maybe Word docs? A personal web page? Blog entries as .txt files you'll copy-paste into wordpress later? It really doesn't matter: the real question is "do you have folders/directories with data in them that you change every now and then, and that you might mess up because you can accidentally hit save and overwrite them, or accidentally hit delete and lose them forever?".
 
 Because the answer is pretty much guaranteed "yes", and you could try to be diligent about never hitting save or delete, but you're human, and you're going to mess up. Maybe not today, maybe not next, week, but chances are pretty much 100% at some point, you'll mess up.
 
