Saving new entry 2016-01-19-19-27-59

--- a/gh-weblog-2/content/posts/markdown/2016-01-19-19-27-59.md
+++ b/gh-weblog-2/content/posts/markdown/2016-01-19-19-27-59.md
@@ -47,6 +47,22 @@ On Linux, Unix, and OSX, you can use the terminal to issue `$>chmod 0444 .git` i
 
 On windows, use any filemanager and right click the dir's folder, and then make sure to check the "read-only" box. On windows deleting the .git dir is usually less of a problem because the dir's marked as "hidden". You'll see it if you're a power user who unhides system and hidden dirs/files, but in normal use you won't see it, and thus won't accidentally delete it.
 
+## I didn't actually mess anything up, but I'd like to look at an old snapshot...
+
+Yeah that's a thing you can do. You can scroll through your snapshot history by using `$> git log`, which will tell show your the name/descriptions for each snapshot (which is why you want to at least use sensible naming/descriptions. A single dot is fast to write, but useless if you ever need to go through your history), tied to a git "commit hash", which is a long hexadecimal string that uniquely identifies that snapshot for the git application. Say I need last week's version of a novel I'm writing, because I rewrote half a chapter but I remember there was a paragraph that had super sweet phrasing and I want it back:
+
+1. `$> git add -A` because I don't want to lose any work
+2. `$> git commit -m "midday work, somedate-2016"` so that git has a snapshot for where I am right now.
+3. `$> git log`, to see my history
+4. Notice that "end of day, Monday, week 2, 2016" has commit "dbcaf87689facb6bcb6f9eb786fs9".
+5. `$>git checkout dbcaf87689facb6bcb6f9eb786fs9`
+
+Boom, git changes everything to match what they were at the time I took that snapshot. I can copy the bits I need onto my desktop, then make sure to put me back on where I just was
+
+`$>git reset master`
+
+This changes all my files to where I just was again, and I can go on with my life. So handy!
+
 # That's it, we're done. 
 
 Go use version control. You *litearlly* have no excuse not to. And if you have any questions or comments, you can either leave those over on github (see the link below this post) or just tweet at me [@TheRealPomax](http://twitter.com/TheRealPomax).
