--- a/gh-weblog-2/content/posts/markdown/2016-01-19-19-27-59.md
+++ b/gh-weblog-2/content/posts/markdown/2016-01-19-19-27-59.md
@@ -63,6 +63,10 @@ Boom, git changes everything to match what they were at the time I took that sna
 
 This changes all my files to where I just was again, and I can go on with my life. So handy!
 
+## What else can I do?
+
+Quite a lot, but all of that's covered by [the git book](https://git-scm.com/book/en/v2), and a lot of it is mostly irrelevant unless you also want to do remote syncing of your data. Still, good read if you really care about your data.
+
 # That's it, we're done. 
 
 Go use version control. You *litearlly* have no excuse not to. And if you have any questions or comments, you can either leave those over on github (see the link below this post) or just tweet at me [@TheRealPomax](http://twitter.com/TheRealPomax).
