Saving new entry 2016-01-19-19-27-59

--- a/gh-weblog-2/content/posts/markdown/2016-01-19-19-27-59.md
+++ b/gh-weblog-2/content/posts/markdown/2016-01-19-19-27-59.md
@@ -69,7 +69,7 @@ Quite a lot, but all of that's covered by [the git book](https://git-scm.com/boo
 
 ## What if the command line is too unfamiliar to me?
 
-You can use the `git-gui` command. This will ask you (if you "just run it") whether to create a new repository, or manage an existing one, so you can do 
+You can use the `git-gui` command. This will ask you (if you "just run it") whether to create a new repository, or manage an existing one. I'm not going to explain how to use that, because  I never use it, but it can do all the things this post talked about.
 
 # That's it, we're done. 
 
