Saving new entry 2016-01-31-19-05-22

--- a/gh-weblog-2/content/posts/markdown/2016-01-31-19-05-22.md
+++ b/gh-weblog-2/content/posts/markdown/2016-01-31-19-05-22.md
@@ -79,7 +79,7 @@ That's right, it's a saw. On a handle. For slicing bread. After you open up a br
 
 ![](/gh-weblog-2/images/knives/knives-12.jpg)
 
-It's also literally just a saw blade. I stopped counting the number of times I accidentally cut myself on this thing. Most knifes don't draw blood just by being tapped. This thing? No mercy.
+It's also literally just a saw blade. I stopped counting the number of times I accidentally cut myself on this thing. Most knives don't draw blood just by being tapped. This thing? No mercy.
 
 ## Keeping knives sharp
 
